name:                boombox
version:             0.1
synopsis:            Chronokinetic stream sources and incremental consumers
-- description:
homepage:            https://github.com/fumieval/boombox
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
-- copyright:
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Boombox
    , Data.Boombox.Boombox
    , Data.Boombox.ByteString
    , Data.Boombox.Extra
    , Data.Boombox.Head
    , Data.Boombox.IO
    , Data.Boombox.Jam
    , Data.Boombox.Player
    , Data.Boombox.Tap
    , Data.Boombox.Tape
  -- other-modules:
  other-extensions:    BangPatterns, DeriveFunctor
  build-depends:       base == 4.*, comonad, semigroups, semigroupoids, bytestring, transformers
  hs-source-dirs:      src
  ghc-options: -Wall -O2
  default-language:    Haskell2010
